--- a/src/index.html
+++ b/src/index.html
@@ -41,5 +41,7 @@
 
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
+
+    <script src="./index.js"></script>
   </body>
 </html>
