--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,6 @@
     <ul class="menu js-menu"></ul>
 
     <script src="./index.js"></script>
+    <!-- <script src="./js/test-1.js"></script> -->
   </body>
 </html>
